--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 *.ear
 .project
 .classpath
+.settings
 **/target
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
