--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,13 @@
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+**/*.class
+**/target
 
 # Package Files #
 *.jar
 *.war
 *.ear
-.project
-.classpath
-.settings
-**/target
+**/.project
+**/.classpath
+**/.settings
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+**/.idea
+**/*.iml
